--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^13.1.0",
     "ffmpeg-static": "^4.4.0",
     "moment": "^2.29.1",
+    "superagent": "^6.1.0",
     "ytdl-core": "^4.8.3"
   }
 }
