--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "token": "NzU2MDg1MjE1NjUwMTE5NzEw.X2MtOg.5faVev4cbwoPKrwFtUrjiT36Wmk"
+    "token": "NzU2MDg1MjE1NjUwMTE5NzEw.X2MtOg.5faVev4cbwoPKrwFtUrjiT36Wmk",
+    "osuAPI": "94b3572ebdf7b6f4d4910110afd6cfef105b9f91"
 }
