--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ffmpeg-static": "^4.4.0",
     "moment": "^2.29.1",
     "node-osu": "^2.2.1",
+    "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
     "superagent": "^6.1.0",
     "ytdl-core": "^4.9.1"
