--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
     "superagent": "^6.1.0",
-    "urban": "^0.3.4",
+    "urban-dictionary": "^3.0.2",
     "ytdl-core": "^4.9.1"
   }
 }
