--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-osu": "^2.2.1",
     "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
+    "simple-youtube-api": "^5.2.1",
     "superagent": "^6.1.0",
     "urban-dictionary": "^3.0.2",
     "ytdl-core": "^4.9.1"
