--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "node-osu": "^2.2.1",
     "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
-    "simple-youtube-api": "^5.2.1",
     "superagent": "^6.1.0",
     "urban-dictionary": "^3.0.2",
+    "yt-search": "^2.10.1",
     "ytdl-core": "^4.9.1"
   }
 }
