--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.6.0",
-    "discord-player": "^5.1.0",
     "discord.js": "^13.1.0",
     "ffmpeg-static": "^4.4.0",
+    "libsodium-wrappers": "^0.7.9",
     "moment": "^2.29.1",
     "node-osu": "^2.2.1",
     "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
     "superagent": "^6.1.0",
     "urban-dictionary": "^3.0.2",
-    "yt-search": "^2.10.1",
+    "yt-search": "^2.10.2",
     "ytdl-core": "^4.9.1"
   }
 }
