--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parse-ms": "^3.0.0",
     "superagent": "^6.1.0",
     "urban-dictionary": "^3.0.2",
+    "youtube-scrapper": "^1.2.0",
     "yt-search": "^2.10.2",
     "ytdl-core": "^4.9.1"
   }
