--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@discordjs/voice": "^0.6.0",
     "axios": "^0.27.2",
     "discord.js": "^13.1.0",
+    "fetch": "^1.1.0",
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
     "moment": "^2.29.1",
     "node-osu": "^2.2.1",
     "ojsama": "^2.2.0",
     "parse-ms": "^3.0.0",
+    "request": "^2.88.2",
     "superagent": "^6.1.0",
     "urban-dictionary": "^3.0.2",
     "youtube-scrapper": "^1.2.0",
