--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.1.0",
     "fetch": "^1.1.0",
     "ffmpeg-static": "^4.4.0",
+    "fs": "^0.0.1-security",
     "libsodium-wrappers": "^0.7.9",
     "moment": "^2.29.1",
     "node-osu": "^2.2.1",
